--- a/loginpage/style/style.css
+++ b/loginpage/style/style.css
@@ -34,6 +34,13 @@
             transition: var(--main-transition);
         }
         
+        input:focus,
+        input:hover {
+            outline: 1px solid black !important;
+            box-shadow: 2px 3px 10px black, -2px -3px 10px black !important;
+            border: none !important;
+        }
+        
         a.btn {
             background-color: black;
             color: white;
