--- a/style/sign.css
+++ b/style/sign.css
@@ -21,8 +21,10 @@
     
     .sign {
         background-color: black;
-        border-radius: 30px;
+        border-top-right-radius: 30px;
+        border-top-left-radius: 30px;
         padding-top: 4%;
+        padding-bottom: 4%;
         margin: 10px auto;
         width: 100%;
     }
@@ -51,4 +53,12 @@
         font-weight: 700;
         background-color: white;
         border: 1px solid black;
+    }
+    
+    .error {
+        border: 1px solid rgb(227, 133, 133);
+        padding: 5px;
+        color: red;
+        text-transform: capitalize;
+        text-align: center;
     }
