--- a/style/sign.css
+++ b/style/sign.css
@@ -55,10 +55,16 @@
         border: 1px solid black;
     }
     
+    .username {
+        overflow: hidden;
+    }
+    
     .error {
         border: 1px solid rgb(227, 133, 133);
         padding: 5px;
         color: red;
         text-transform: capitalize;
         text-align: center;
+        border-radius: 5px;
+        margin: 4px;
     }
