--- a/style/sign.css
+++ b/style/sign.css
@@ -24,9 +24,12 @@
         border-top-right-radius: 30px;
         border-top-left-radius: 30px;
         padding-top: 4%;
-        padding-bottom: 4%;
         margin: 10px auto;
         width: 100%;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 50%;
     }
     
     .sign-form {
