--- a/style/sign.css
+++ b/style/sign.css
@@ -26,6 +26,7 @@
         padding-top: 4%;
         margin: 10px auto;
         width: 100%;
+        /* min-height: 100%; */
         position: absolute;
         transform: translate(-50%, -50%);
         top: 50%;
